# BAS-Developer-Tools

./: .gitignore  README.md  distribute.py  entry.py  nuitka_build.bat  pyproject.toml  upx.py
.github/workflows/: distribute..yml
resources/: update_log.txt
scripts/: distribute.py  upx.py
src/app/: connector.py  frame_viewer.py  logger.py  main.py  region_save_dialog.py
src/app/OpenGL/: qyuvopenglwidget.py  yuvopenglwidget.py
src/app/qt_scrcpy/: __init__.py  qcore.py
src/app/ui/: __init__.py  connector.ui  main.ui  ui_connector.py  ui_main.py
src/app/utils/: color_console.py  fps_counter.py  mouse_recorder.py
src/scrcpy/: __init__.py  const.py  control.py
