[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AresConnor", email = "aresconnor867@gmail.com"},
]
dependencies = [
    "av>=11.0.0",
    "pyopengl>=3.1.7",
    "pyside6==6.6.0",
    "adbutils>=1.2.15",
    "setuptools>=68.2.2",
    "nuitka>=1.8.6",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

